# TapeOut_Presentation-EECE_409

./: .gitignore  main.py  mount.pc  pyproject.toml
media/videos/main/1080p60/partial_movie_files/ImageGrid/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/UART/: partial_movie_file_list.txt
media/videos/main/480p15/partial_movie_files/ImageGrid/: partial_movie_file_list.txt
